src/app/content/content.component.less
html, body {
  font-family: sans-serif;
  cursor: default;
}

.main {
  background-color: #f2f2f2;
  min-height: 650px;
}

.main h1 {
  color: #F65A5B;
  font-size: 64px;
  line-height: 90px;
  width: 70%;
  margin: 10px;
  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
}

.main h2 {
  color: #39D1B4;
  font-size: 20px;
  margin: 1 0 40px 0;
  padding: 0px 0;
  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.thumbnail {
  border: 0px;
  position: relative;
  padding: 50px;
}

.thumbnail img {
  margin-bottom: 30px;
  max-width: 80%;
  height: 300px;
  width: 200px;
}

.title {
  color: #444;
  margin: 0;
  font-size: 18px;
  font-weight: 800;
}

.date {
  color: #444;
  margin: 0;
  font-size: 18px;
  font-weight: 800;
  color: #a3a3a3;
  font-size: 14px;
  font-weight: 200;
}

.price {
  background-color: #39D1B4;
  color: #fff;
  font-size: 18px;
  border-radius: 50%;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
  font-weight: 200;
  height: 80px;
  line-height: 80px;
  text-align: center;
  width: 80px;
  position: absolute;
  top: 0px;
  right: 20px;
}

.rating {
  text-align: right;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  margin: 30px 0 -30px 20px;
}

.likes, .dislikes {
  background: #F65A5B;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-size: 15px;
  line-height: 40px;
  min-width: 40px;
  height: 40px;
  border-radius: 50%;
  margin: 0 -30px 0 40px;
  text-align: center;
  font-weight: 200;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
  transition: background 500ms;
}

.likes:hover, .dislikes:hover {
  color: #F65A5B;
  background: rgba(246, 90, 91, 0.25);
  transition: background 500ms;
}

a {
  color: #F65A5B !important;
  text-decoration: none !important;
}

a:active, a:visited {
  color: #F65A5B !important;
  text-decoration: none !important;
}

.me, .paw {
  text-align: center;
  color: #F65A5B;
}

.grow {
  transition: all 0.5s ease-in-out;
  margin-top: 1%;
}
.grow:hover {
  transform: scale(1.1);
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

body {
    padding-top: 50px;
}

.dropdown.dropdown-lg .dropdown-menu {
    margin-top: -1px;
    padding: 6px 20px;
}

.input-group-btn .btn-group {
    display: flex !important;
}

.btn-group .btn {
    border-radius: 0;
    margin-left: -1px;
}

.btn-group .btn:last-child {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}

.btn-group .form-horizontal .btn[type="submit"] {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.form-horizontal .form-group {
    margin-left: 0;
    margin-right: 0;
}

.form-group .form-control:last-child {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}

@media screen and (min-width: 768px) {
    #adv-search {
        width: 500px;
        margin: 0 auto;
    }
    .dropdown.dropdown-lg {
        position: static !important;
    }
    .dropdown.dropdown-lg .dropdown-menu {
        min-width: 500px;
    }
}

